--- a/Frontend/src/components/Dashboard/Prospects/prospects.scss
+++ b/Frontend/src/components/Dashboard/Prospects/prospects.scss
@@ -378,6 +378,7 @@
   padding: 0.25rem 0.5rem;
   background: #f8fafc;
   border-radius: 6px;
+  width: 100%;
 }
 
 .contact-icon {
@@ -393,6 +394,7 @@
   color: #475569;
   word-break: break-word;
   line-height: 1.3;
+  margin-left: 50px;
 }
 
 .company-info {
